app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require animate

 */
body {
  font-family: 'Roboto', sans-serif;
  overflow-x: hidden;
}

h1,
.h1,
h2,
.h2,
h3,
.h3,
h4,
.h4 {
  margin: 0px;
  line-height: 1.5;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
}

h4 a:hover {
  text-decoration: none;
  color: black;
  background-color:inherit;
}

p a:hover {
  text-decoration: none;
  color: black;
  background-color:inherit;
}

.navbar {
  background-color: #FF5A5A;
  color: white;
}

.navbar-inner {
    min-height: 0px;
}

.navbar-default .navbar-brand {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 48px;
  letter-spacing: 4px;
  word-spacing: 0em;
  line-height: 150px;
  height: 150px;
  padding: 0;
  margin-left: 1em;
  color: white;
}

.navright li a {
  padding: 15px;
  margin-right: 20px;
  margin-top: 50px;
  margin-bottom: 20px;
  float: right;
  color: white;
}

.container-full {
  margin-right: auto;
  margin-left: auto;
  width: 100%;
  color: white;
}

.container-full.subhead {
  margin-top: 2em;
  margin-bottom: 2em;
  width: 100%;
  color: white;
  padding: 1em;
  background-color: #5AADFF;
  text-align: center;
}

.container-full.subhead h2 {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 24px;
  letter-spacing: 0em;
  word-spacing: 0em;
  line-height: 1.4;
  height: 100px;
  line-height: 100px;
  white-space: nowrap;
}

.container-full.subhead-home {
  margin-top: -2.5em;
  height: 100px;
  line-height: 100px;
  width: 100%;
  color: white;
  padding: 2em;
  background-color: #5AADFF;
  text-align: center;
}

.brand {
  margin-bottom: 1em;
  font-size: 24px;
}

a.brand {
  white-space: nowrap;
  letter-spacing: 4px;
  color: #4A4A4A;
}

.trending {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 24px;
  letter-spacing: 0em;
  word-spacing: 0em;
  line-height: 1.4;
  height: 100px;
  line-height: 100px;
  white-space: nowrap;
  background-color: #4A4A4A;
  color: white;
  margin: -30px -15px -20px -15px;
  text-transform: uppercase;
}

.footer-mid {
  font-size: 14px;
  line-height: 1.4;
  color: #4A4A4A;
  white-space: nowrap;
  text-align: center;
  letter-spacing: 1px;
  line-height: 1.4;
}

.flfooter {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 24px;
  word-spacing: 0em;
  line-height: 1.4;
  background-color: #5AADFF;
  min-height: 100px;
  color: white;
  font-size: 100%;
  letter-spacing: 1px;
  margin-top: -20px;
}

.social {
  margin-bottom: 1em;
}

.social p a {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 14px;
  line-height: 1.4;
  color: #4A4A4A;
  text-decoration: none;
}

.social a:hover {
  color: white;
  text-decoration: none;
}

.social, .container-full :hover {
  text-decoration: none;
  background-color: inherit;
}

.force-to-bottom {
  position:absolute;
  bottom: 0;
  width: 100%;
  margin-left: -0.6em;
}

.artist-name {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 24px;
  letter-spacing: 0em;
  word-spacing: 0em;
  color: white;
  text-transform: uppercase;
  background-color: rgba(68, 67, 100, 0.6);
  text-align: center;
  display: inline-block;
  width: 100%;
  height: 75px;
  line-height: 1.1em;
  padding: 0.25em;
  overflow: hidden;
}

.artist-container {
  height: 250px;
  background-size: cover;
  background-repeat: no-repeat;
}

.fan-container {
  height: 150px;
  background-size: cover;
  background-repeat: no-repeat;
}

.fan-name {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 36px;
  text-transform: uppercase;
  display: inline-block;
  line-height: 1.1em;
}

.profile-subhead {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  display: inline-block;
  line-height: 1.6em;
  margin-top: 1em;
}

a.profile-edit {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 14px;
  display: inline-block;
  line-height: 1.1em;
  color: #5AADFF;
}

a.profile-edit:hover, a.profile-subhead:hover {
  color: #5AADFF;
  text-decoration: underline;
  background-color: inherit;
}

.profile-copy {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 18px;
  letter-spacing: 0em;
  word-spacing: 0em;
  line-height: 1.4;
  padding-bottom: 1em;
  color: black;
}

a.profile-copy {
  background-color: inherit;
  color: #5AADFF;
  text-decoration: none;
}

a.profile-copy:hover {
  background-color: inherit;
  color: #5AADFF;
  text-decoration: underline;
}

a.artist-name {
  color: white;
  overflow:hidden;
}

a.artist-name:hover {
  text-decoration: none;
  background-color: rgba(68, 67, 100, 0.8);
}

.artist-title {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 36px;
  line-height: 1.4;
  text-transform: uppercase;
  line-height: 1.1em;
}

.artist-description {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 18px;
  letter-spacing: 0em;
  word-spacing: 0em;
  line-height: 1.4;
  padding-bottom: 1em;
  color: black;
  display:block;
}

.btn.luv_btn {
  display:block;
  font-size: 24px;
  width: 100%;
  letter-spacing: 1px;
  margin-top: 15px;
  margin-bottom: 15px;
}

.img-responsive {
  display: inline-block;
  max-width: 100%;
  height: auto;
  margin: 0;
}

.tourcity {
  font-family: 'Roboto', sans-serif;
  font-style: medium;
  font-weight: 500;
  font-size: 16px;
  text-transform: none;
  text-decoration: none;
  color: black;
}

.tourdates {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 14px;
  text-transform: none;
  text-decoration: none;
  line-height: 1.4;
  color: black;
}

.venue {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 14px;
  text-transform: none;
  text-decoration: none;
  color: #505050;
}

p.venue a {
  color: #5AADFF;
}

.merch {
  margin-top: 1em;
}

.merch p {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 18px;
  line-height: 1.4;
  color: #505050;
  line-height: 2;
}

.merch p a {
  color: #5AADFF;
}

p.filterby {
  font-size: 90%;
  color: #505050;
}

.note {
  position: relative;
  width: 100%;
  padding: 1em 1.5em;
  margin-top: 1em;
  color: #black;
  background: #ffac5a;
    overflow: hidden;
}

.note:before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  border-width: 0 16px 16px 0;
  border-style: solid;
  border-color: #fff #fff #ff860e #ff860e;
  background: #ff860e;
  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
  -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
  box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
  /* Firefox 3.0 damage limitation */
  display: inline-block; width: 0;
}

.note h4 {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 20px;
  letter-spacing: 0em;
  word-spacing: 0em;
  line-height: 1.4;
  color: #505050;
  margin-bottom: 1em;
}

.note p {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  letter-spacing: 0em;
  word-spacing: 0em;
  line-height: 1.4;
}

.note_rm {
  padding-top: -0.25em;
  margin-left: 1em;
  float: right;
  padding: 0.5em;
}

a.note_rm {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 16px;
  color: black;
}

.btn {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 18px;
  color: white;
  text-transform: uppercase;
  background-color: #4A4A4A;
  border-radius: 0;
  border: none;
}

.btn-loggedin {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 18px;
  color: white;
  text-transform: uppercase;
  background-color: #4A4A4A;
  border-radius: 0;
  border: none;
}

.btn a {
  color: white;
}

.btn a:focus,
.btn a:hover,
a.btn.btn-more-artists:hover,
a.btn-more:hover {
  background-color: #eee;
  color: black;
  text-decoration: none;
}

input.btn:hover {
  background-color: #eee;
  color: black;
  text-decoration: none;
}

.btn.ticket-btn {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 18px;
  letter-spacing: 0em;
  word-spacing: 0em;
  line-height: 1.4;
  color: white;
  text-transform: uppercase;
  background-color: #4A4A4A;
  width: 100%;
}

.btn.ticket-btn:hover {
  background-color: #eee;
  color: black;
  text-decoration: none;
}

a.btn-more-artists {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 18px;
  line-height: 1.4;
  color: white;
  text-transform: uppercase;
  background-color: #4A4A4A;
  margin-top: 1em;
  margin-bottom: 1em;
  padding: 20px;
  text-align: center;
  width: 100%
}

.btn-more-artists a:hover {
  text-decoration: none;
  background-color: inherit;
}

.btn-more-artists a {
  color: white;
}

.btn-more {
  width: 100%;
}

p.btn-more {
  width: 100%;
  background-color: #4A4A4A;
  text-align: center;
  padding: 1em;
  margin-top: 1em;
}

p.btn-more a {
  color: white;
}

p.btn-more {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 18px;
  letter-spacing: 0em;
  word-spacing: 0em;
  line-height: 1.4;
  color: white;
  text-transform: uppercase;
}

ul.news {
  margin: 0px;
  line-height: 1.5;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
}

#map {
  height: 350px;
  width: 100%;
  margin-top: 1em;
}

.control-label label {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 300;
  font-size: 14px;
  letter-spacing: 0em;
  word-spacing: 0em;
  line-height: 1.4;
  color: black;
}

